@@ -87,7 +87,11 @@ CONFIG = {
 
     # Password you want to start with. Normally you don't specify it 
     # in a configuration file but in menu or on command line
-    'start password' => ''
+    'start password' => '',
+
+    # If Viking is hurt and has a healing item in his inventory, should he
+    # use it automatically?
+    'auto-use healing items' => false
   },
 
   ### CONTROLS - CURRENTLY USELESS
