@@ -43,7 +43,8 @@ CONFIG = {
         false
       end
     },
-    'start password' => String
+    'start password' => String,
+    'auto-use healing items' => [true, false]
   },
   'Controls' => {
   },
